# ros_telescope

Nema17Arduino/: Nema17Arduino.ino
celestial_tracker/: CMakeLists.txt  package.xml
celestial_tracker/include/celestial_tracker/: CelestialTracker.h
celestial_tracker/launch/: celestial_tracker.launch
celestial_tracker/src/: CelestialTracker.cpp  celestial_tracker_node.cpp
ihm_communication/: CMakeLists.txt  package.xml
ihm_communication/launch/: ihm_communication.launch
local_sidereal_time/: CMakeLists.txt  package.xml
local_sidereal_time/src/: LocalSiderealTime.cpp
misc/: CMakeLists.txt  package.xml
misc/launch/: ihm_communication.launch
object_tracker/: CMakeLists.txt  package.xml
object_tracker/include/object_tracker/: ObjectTracker.h
object_tracker/launch/: object_tracker.launch
object_tracker/src/: ObjectTracker.cpp  object_tracker_node.cpp
ros/guidance_mode/: CMakeLists.txt  default_guidance_mode.xml  package.xml
ros/guidance_mode/include/guidance_plugins/: base_guidance.h  manual_guidance.h
ros/guidance_mode/src/: base_guidance.cpp  manual_guidance.cpp
ros/ihm_communication/launch/: ihm_communication.launch
ros/local_sidereal_time/include/local_sidereal_time/: LocalSiderealTime.h
ros/local_sidereal_time/launch/: local_sidereal_time.launch
ros/local_sidereal_time/src/: local_sidereal_time_node.cpp
ros/mount_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/mount_controller/include/: MountController.h
ros/mount_controller/launch/: mount_controller.launch
ros/mount_controller/src/: MountController.cpp
ros/mount_guidance/: CMakeLists.txt  package.xml
ros/mount_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/mount_interface/include/: MountInterface.h
ros/mount_interface/launch/: mount_interface.launch
ros/mount_interface/src/: MountInterface.cpp  mount_interface_node.cpp
ros/mount_msgs/: CMakeLists.txt  Changelog.rst  package.xml
ros/mount_msgs/action/: Guidance.action
ros/utilities/: CMakeLists.txt  Changelog.rst  package.xml
ros/utilities/include/stellar_position_conversion/: StellarPositionConversion.h
sql/: Data.txt  Structure.txt
start/: CMakeLists.txt  package.xml
start/launch/: start.launch
stellar_utilities/: CMakeLists.txt  package.xml
stellar_utilities/include/stellar_position_conversion/: StellarPositionConversion.h
stellar_utilities/src/: StellarPositionConversion.cpp
telescope_motors_connector/: CMakeLists.txt  package.xml
telescope_motors_connector/arduino/: MotorsStatusRaw.h
telescope_motors_connector/arduino/motor_connector/: motor_connector.ino
telescope_motors_connector/launch/: telescope_motors_controler.launch
telescope_motors_controler/: CMakeLists.txt  package.xml
telescope_motors_controler/launch/: telescope_motors_controler.launch
telescope_motors_controler/src/: telescope_controler_node.py
telescope_msgs/: CMakeLists.txt  package.xml
telescope_msgs/msg/: EquatorialCoordinates.msg  EquatorialCoordinatesText.msg  MotorsStatus.h  MotorsStatus.msg  MotorsStatusRaw.msg
telescope_msgs/srv/: ChangeTrackingMode.srv
telescope_utilities/: CMakeLists.txt  package.xml
telescope_utilities/include/stellar_position_conversion/: StellarPositionConversion.h
test_unit/: CMakeLists.txt  package.xml
test_unit/src/: stellar_position_conversion_test.cpp
