<?xml version="1.0"?>
<package format="2">

  <name>misc</name>
  
  <version>0.0.0</version>
  
  <description>
    The misc package. Contains all the miscellaneous nodes.
  </description>

  <author>Christophe Heymann</author>

  <maintainer email="c.heymann@cms-automatisme.com"/>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>

</package>
