<?xml version="1.0"?>
<package format="2">

  <name>telescope_msgs</name>
  
  <version>0.0.0</version>
  
  <description>
    The telescope_msgs package. Contains all the messages and services files.
  </description>

  <author>Christophe Heymann</author>

  <maintainer email="c.heymann@cms-automatisme.com"/>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>message_runtime</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  
  <depend>std_msgs</depend>

</package>
