<?xml version="1.0"?>
<package format="2">

  <name>test_unit</name>

  <version>0.0.0</version>

  <description>The test_unit package</description>

  <maintainer email="christophe@todo.todo">christophe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>telescope_utilities</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>telescope_utilities</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>telescope_utilities</exec_depend>


</package>
