<?xml version="1.0"?>
<package format="2">

  <name>guidance_mode</name>

  <version>1.0.0</version>

  <description>
    The guidance_mode plugins package.
    Defines all the guidance mode.
  </description>

  <maintainer email="christophe.heymann@gmail.com">Christophe Heymann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>mount_msgs</depend>

  <export>
    <action_plugins plugin="${prefix}/default_guidance_mode.xml"/>
  </export>

</package>
