<?xml version="1.0"?>
<package format="2">

  <name>mount_controller</name>

  <version>1.0.0</version>

  <description>The mount_controller package</description>

  <maintainer email="christophe.heymann@gmail.com">Christophe Heymann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mount_msgs</depend>
  <depend>utilities</depend>

</package>
