<?xml version="1.0"?>
<package format="2">

  <name>mount_interface</name>

  <version>1.0.0</version>

  <description>The mount_interface package</description>

  <maintainer email="christophe.heymann@gmail.com">Christophe Heymann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>serial</depend>

</package>
