<?xml version="1.0"?>

<package format="2">

  <name>utilities</name>

  <version>1.0.0</version>

  <description>The utilities package</description>

  <maintainer email="christophe.heymann@gmail.com">Christophe Heymann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mount_msgs</depend>

</package>
